--- a/prediction_service/webapp/templates/predict.html
+++ b/prediction_service/webapp/templates/predict.html
@@ -58,7 +58,7 @@
                     placeholder="Enter a value of Age in Days" required />
             </div>
             <div class="mb-3">
-                <input class="btn btn-primary" type="submit" value="Predict Median House Value" required />
+                <input class="btn btn-primary" type="submit" value="Predict Concrete Strength" required />
             </div>
 
         </form>
