Social Media Changes

--- a/prediction_service/webapp/templates/header.html
+++ b/prediction_service/webapp/templates/header.html
@@ -125,10 +125,10 @@ table-layout: fixed;
             <section class="mb-4">
 
                 <!-- Linkedin -->
-                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button"
+                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.linkedin.com/in/bala-murali-138987199/" role="button"
                     data-mdb-ripple-color="dark"><i class="fab fa-linkedin"></i></a>
                 <!-- Github -->
-                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button"
+                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://github.com/techner3" role="button"
                     data-mdb-ripple-color="dark"><i class="fab fa-github"></i></a>
             </section>
             <!-- Section: Social media -->
@@ -137,8 +137,7 @@ table-layout: fixed;
 
         <!-- Copyright -->
         <div class="text-center text-light p-3" style="background-color: rgba(3, 36, 67, 0.504);">
-            © 2022 Copyright:
-            <a class="text-light" href="https://ineuron.ai/">Balamurali K</a>
+            © 2022 Copyright: Balamurali K
         </div>
         <!-- Copyright -->
     </footer>
