Index Page changes

--- a/prediction_service/webapp/templates/index.html
+++ b/prediction_service/webapp/templates/index.html
@@ -19,7 +19,7 @@
             <div class="card-body">
         
                 <h5 class="card-title">Concrete Strength Prediction</h5>
-                <p class="card-text">Full-stack data science course is a live mentor-led job guaranteed certification program with a full-time one-year internship provided by iNeuron, in this course you will learn the entire stack required to work in the data science, data analytics, and big data domain, including machine learning, deep learning, computer vision NLP and Big data including MLOps and cloud infrastructure, along with real-time industry projects and product development with the iNeuron product development team, which will enable you to contribute on various levels. </p>
+                <p class="card-text">The project has been developed to predict the strength of concrete based on a amount of various things added to make concrete such as cement, water, fly ash, coarse aggregate, fine aggregate, superplasticizer, blast furnace and its age. The dataset consists of all these features.</p>
             </div>
         </div>
         </div>
