--- a/prediction_service/webapp/templates/predict.html
+++ b/prediction_service/webapp/templates/predict.html
@@ -89,7 +89,7 @@
             {% endfor %}
             <tr>
 
-                <td>concrete_strength </td>
+                <td>compressive_strength </td>
                 <td>
                     {{ context['concrete_strength_value'][0] }}
                 </td>
