Readme and Index Updated

--- a/prediction_service/webapp/templates/index.html
+++ b/prediction_service/webapp/templates/index.html
@@ -59,13 +59,13 @@
     <div class="col-md-4 col-lg-4 col-sm-12"  style="margin-bottom:20px;">
         <div class="card">
             <div class="card-header">
-              Estimate Concrete Strength
+              Estimate Concrete Compressive Strength
             </div>
             <div class="card-body">
         
-                <h5 class="card-title">Access Concrete Strength Predictor</h5>
-                <p class="card-text">Form will be displayed. Submit the form to get Concrete Strength.</p>
-                <a class="btn btn-primary" href="/predict">Get Concrete Strength</a>
+                <h5 class="card-title">Concrete Compressive Strength Predictor</h5>
+                <p class="card-text">Form will be displayed. Submit the form to get Concrete Compressive Strength.</p>
+                <a class="btn btn-primary" href="/predict">Get Concrete Compressive Strength</a>
             </div>
         </div>
         </div>
